# DIPL

./: .clang-format  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Filter.cpp  Filter.h  Fourier.cpp  Fourier.h  Image.cpp  Image.h  README.md  Rand.h  Timer.h  histogram.cpp  histogram.h  main.cpp
.github/workflows/: action.yaml
Image/: image.cpp  image.h
algorithm/: Fourier.cpp  Fourier.h  GaussKernel.cpp  GaussKernel.h  frequency_filter.cpp  frequency_filter.h
image/: Image.cpp  Image.h
include/: ipl.h
include/algorithm/: Fourier.h  frequency_distribution.h  spatial_filter.h  wavelet_transform.h
include/utility/: Rand.h  Timer.h  filter.h  histogram.h  image_convert.h
io/: io.h
sample/: CMakeLists.txt
sample/ch01/: CMakeLists.txt  test.cpp
sample/ch04/: CMakeLists.txt  P155F4_24.cpp  P155F4_25.cpp  P156F4_27.cpp  P161F4_29.cpp  P162F4_30.cpp  P163F4_31.cpp  P163F4_32.cpp  P165F4_35.cpp  P171F4_42.cpp  P172F4_45.cpp  P174F4_48.cpp  P175F4_50.cpp  P175F4_51.cpp  P178F4_54.cpp  P178F4_55.cpp  P178F4_56.cpp  P179F4_57.cpp  P186F4_64.cpp  filter_example.cpp  test.cpp
sample/ch05/: CMakeLists.txt  P201F5_04.cpp  P202F5_05.cpp  P204F5_07.cpp  P205F5_078.cpp  P205F5_08.cpp  P207F5_10.cpp  P207F5_12.cpp  P212F5_16.cpp  P213F5_19.cpp  P215F5_20.cpp  P219F5_25.cpp
sample/ch07/: CMakeLists.txt  P292F7_03.cpp  P297F7_09.cpp  P299F7_10.cpp
sample/ch08/: P395F8_51.cpp
sample/ch09/: P405F9_05.cpp  P407F9_07.cpp  P410F9_11.cpp  P413F9_14.cpp  P414F9_16.cpp  P415F9_18.cpp  P424F9_29.cpp  P429F9_35.cpp  P433F9_40.cpp
src/: CMakeLists.txt  CMakeLists2.txt  main.cpp
src/algorithm/: CMakeLists.txt  Fourier.cpp  Fourier.h  algorithm.hpp  frequency_distribution.cpp  frequency_distribution.h  frequency_filter.cpp  frequency_filter.h  spatial_filter.cpp  spatial_filter.h  wavelet_transform.cpp  wavelet_transform.h
src/assist/: CMakeLists.txt  Rand.h
src/book_example/: CMakeLists.txt
src/book_example/ch02/: test.cpp
src/book_example/ch04/: CMakeLists.txt  P155F4_24.cpp  P155F4_25.cpp  test.cpp
src/image/: CMakeLists.txt  Image.cpp  Image.h
src/utility/: CMakeLists.txt  Rand.cpp  Timer.h  filter.cpp  filter.h  fourier_filter.cpp  fourier_filter.h  histogram.cpp  histogram.h  image_convert.cpp  image_convert.h  utility.hpp
