CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(IPL)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Build type - Release by default
if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Release)
elseif(CMAKE_BUILD_TYPE MATCHES "Debug")
	add_definitions(-DDEBUG)
endif()

# 设置 CMAKE_INSTALL_PREFIX 的默认值
if(NOT USER_INSTALL_PREFIX)
	set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR}/install)
else()
	set(CMAKE_INSTALL_PREFIX ${USER_INSTALL_PREFIX})
endif()

# 库文件输出目录
# SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
# 可执行文件输出目录
# SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

# 配置 OpenCV 库
FIND_PACKAGE( OpenCV REQUIRED )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
LINK_LIBRARIES(${OpenCV_LIBS})

add_definitions(-DDATA_DIR="${PROJECT_SOURCE_DIR}/sample/data")

include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/include/algorithm)
include_directories(${PROJECT_SOURCE_DIR}/include/utility)


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(sample)








