# 引入头文件目录
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

# 引入动态链接库
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

# ADD_SUBDIRECTORY(ch01) 
# ADD_SUBDIRECTORY(ch02) 
# ADD_SUBDIRECTORY(ch03) 
ADD_SUBDIRECTORY(ch04) 
# ADD_SUBDIRECTORY(ch05)
# ADD_SUBDIRECTORY(ch07) 
# ADD_SUBDIRECTORY(ch08)
# ADD_SUBDIRECTORY(ch09) 





