AUX_SOURCE_DIRECTORY(. ALGORITHM_LIST)
ADD_LIBRARY(algorithm STATIC ${ALGORITHM_LIST}) # 动态库


# 安装
INSTALL(TARGETS algorithm ARCHIVE DESTINATION ${PROJECT_BINARY_DIR}/install/lib)

FILE(GLOB HEADER_FILE ./*.h ./*.hpp) #所有头文件存入变量
FOREACH(F ${HEADER_FILE})
    INSTALL(FILES ${F} DESTINATION ${PROJECT_BINARY_DIR}/install/include/algorithm)
ENDFOREACH(F)







