# 傅里叶变换库
SET(LIBRAND_SRC Rand.cpp)
ADD_LIBRARY(rand SHARED ${LIBRAND_SRC})
ADD_LIBRARY(rand_static STATIC ${LIBRAND_SRC})
SET_TARGET_PROPERTIES(rand_static PROPERTIES OUTPUT_NAME "rand")

INSTALL(FILES Rand.h DESTINATION ${PROJECT_BINARY_DIR}/install/include/assist)
INSTALL(TARGETS rand rand_static
        LIBRARY DESTINATION ${PROJECT_BINARY_DIR}/install/lib
		ARCHIVE DESTINATION ${PROJECT_BINARY_DIR}/install/lib)


# 滤波器生成库
SET(LIBTIMER_SRC Timer.cpp)
ADD_LIBRARY(timer SHARED ${LIBTIMER_SRC})
ADD_LIBRARY(timer_static STATIC ${LIBTIMER_SRC})
SET_TARGET_PROPERTIES(timer_static PROPERTIES OUTPUT_NAME "timer")

INSTALL(FILES Timer.h DESTINATION ${PROJECT_BINARY_DIR}/install/include/assist)
INSTALL(TARGETS timer timer_static
        LIBRARY DESTINATION ${PROJECT_BINARY_DIR}/install/lib
		ARCHIVE DESTINATION ${PROJECT_BINARY_DIR}/install/lib)

