# 随机数库
SET(LIBRAND_SRC Rand.cpp)
ADD_LIBRARY(rand SHARED ${LIBRAND_SRC})
ADD_LIBRARY(rand_static STATIC ${LIBRAND_SRC})
SET_TARGET_PROPERTIES(rand_static PROPERTIES OUTPUT_NAME "rand")



# 计时器库
SET(LIBTIMER_SRC Timer.cpp)
ADD_LIBRARY(timer SHARED ${LIBTIMER_SRC})
ADD_LIBRARY(timer_static STATIC ${LIBTIMER_SRC})
SET_TARGET_PROPERTIES(timer_static PROPERTIES OUTPUT_NAME "timer")


