#链接库搜索目录
#LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
AUX_SOURCE_DIRECTORY(. UTILITY_LIST)
ADD_LIBRARY(utility STATIC ${UTILITY_LIST}) # 动态库

# 链接库image依赖于algorithm
TARGET_LINK_LIBRARIES(utility algorithm)


# 安装
INSTALL(TARGETS utility ARCHIVE DESTINATION ${PROJECT_BINARY_DIR}/install/lib)

FILE(GLOB HEADER_FILE ./*.h ./*.hpp) #所有头文件存入变量
FOREACH(F ${HEADER_FILE})
    INSTALL(FILES ${F} DESTINATION ${PROJECT_BINARY_DIR}/install/include/utility)
ENDFOREACH(F)



